# pico-scope

./: CMakeLists.txt  DIAGRAM.md  README.md  README.rst  build.sh  export.sh  pico_sdk_import.cmake
adc_console/: CMakeLists.txt
scope/: CMakeLists.txt  README.md  build.sh
scope/src/: adc.c  pico-scope.c  tusb_config.h
src/: pico-scope.c  usb_descriptors.c
